--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.18.5",
     "axios": "^0.25.0",
     "flv.js": "^1.6.2",
+    "localStorage": "^1.0.4",
     "mockjs": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
